--- a/tem-store-hn-master/frutas.html
+++ b/tem-store-hn-master/frutas.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -142,7 +142,7 @@
 							<div class="product-body">
 								<p class="product-category">Frutas</p>
 								<h3 class="product-name"><a href="#">Frambuesa</a></h3>
-								<h4 class="product-price">$3000 kg</h4>
+								<h4 class="product-price">$3000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -156,12 +156,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/PC_02.jpg" alt="">
+								<img src="./img/frutilla.jpg" alt="" >
 							</div>
 							<div class="product-body">
-								<p class="product-category">OFICINA</p>
-								<h3 class="product-name"><a href="#">Acer Aspire E15</a></h3>
-								<h4 class="product-price">L.9,099.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Frutillas</a></h3>
+								<h4 class="product-price">$5000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -177,12 +177,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/PC_03.jpg" alt="">
+								<img src="./img/limones.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">OFICINA</p>
-								<h3 class="product-name"><a href="#">Acer Chromebook 11</a></h3>
-								<h4 class="product-price">L.4,872.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Limones</a></h3>
+								<h4 class="product-price">$2000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -196,12 +196,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/PC_04.jpg" alt="">
+								<img src="./img/naranja.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">ESTUDIO</p>
-								<h3 class="product-name"><a href="#">Acer Chromebook R11</a></h3>
-								<h4 class="product-price">L.7,152.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Naranjas</a></h3>
+								<h4 class="product-price">$3000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -219,12 +219,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/PC_06.jpg" alt="">
+								<img src="./img/platano.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">ESTUDIO</p>
-								<h3 class="product-name"><a href="#">ASUS Vivobook F150</a></h3>
-								<h4 class="product-price">L.12,120.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Platano</a></h3>
+								<h4 class="product-price">$4000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -238,12 +238,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/PC_09.jpg" alt="">
+								<img src="./img/durazno.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">DISEÑO</p>
-								<h3 class="product-name"><a href="#">ACER Chromebook 14</a></h3>
-								<h4 class="product-price">L.19,999.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Durazno</a></h3>
+								<h4 class="product-price">$4000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -259,12 +259,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/PC_07.jpg" alt="">
+								<img src="./img/tomate.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">DESARROLLADORES</p>
-								<h3 class="product-name"><a href="#">Chromebook Flip C302</a></h3>
-								<h4 class="product-price">L.980.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Tomate</a></h3>
+								<h4 class="product-price">$3000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -278,12 +278,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/PC_08.jpg" alt="">
+								<img src="./img/palta.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">OFICINA</p>
-								<h3 class="product-name"><a href="#">ACER Aspire E 15</a></h3>
-								<h4 class="product-price">L.10,000.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Palta</a></h3>
+								<h4 class="product-price">$6000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
