--- a/tem-store-hn-master/index.html
+++ b/tem-store-hn-master/index.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		 <!-- ETIQUETAS REFERENCIALES -->
-	    <meta name="description" content="Tienda Online de Tecnología y Más.">
-	    <meta name="keywords" content="tienda, compras, precio, ventas, ecomerce, comercio, online, store, TEM, tecnología, accesorios,
-	    computadoras, impresoras, arduino, cables, teclados, mouses, keyboard, laptop">
-
-	    <meta http-equiv="author" content="Abdias Alvarado">
-
-		<title>TEM Store - Tecnología, Electrónica y Más</title>
+		<title>Marketagro - Productos agricolas Frutas y Verduras </title>
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -49,7 +42,7 @@
 							<div class="header-logo">
 								<a href="index.html" class="logo">
 									<img src="./img/logo.png" alt="Logo TEM Store" width="50px">
-									TEM STORE&#174;
+									MarketAgro&#170;
 								</a>
 							</div>
 						</div>
@@ -119,25 +112,22 @@
 				<div id="responsive-nav">
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="index.html">Inicio</a></li>
-						<li><a href="computadoras.html">Computadoras</a></li>
-						<li><a href="celulares.html">Celulares</a></li>
-						<li><a href="electronica.html">Electrónica</a></li>
-						<li><a href="accesorios.html">Accesorios</a></li>
-						<li><a href="impresoras.html">Impresoras</a></li>
-						<li><a href="camaras.html">Cámaras</a></li>
+						<li><a href="frutas.html">Frutas</a></li>
+						<li><a href="verduras.html">Verduras</a></li>
+					
 					</ul>
 				</div>
 			</div>
 		</nav>
-
 		<!-- CONTENIDO -->
+		<!-- Section -->
 		<div class="section">
 			<!-- container -->
 			<div class="container">
 				<!-- row -->
 				<div class="row">
 
-		<div class="col-md-12">
+					<div class="col-md-12">
 						<div class="section-title text-center">
 							<h3 class="title">COMPUTADORAS</h3>
 						</div>
@@ -150,9 +140,9 @@
 								<img src="./img/PC_01.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">Gaming</p>
-								<h3 class="product-name"><a href="#">Acer Predator Helios 300</a></h3>
-								<h4 class="product-price">L.24,580.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Frambuesa</a></h3>
+								<h4 class="product-price">$3000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -166,96 +156,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/PC_02.jpg" alt="">
+								<img src="./img/frutilla.jpg" alt="" >
 							</div>
 							<div class="product-body">
-								<p class="product-category">OFICINA</p>
-								<h3 class="product-name"><a href="#">Acer Aspire E15</a></h3>
-								<h4 class="product-price">L.9,099.00</h4>
-								<div class="product-btns">
-									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- /product -->
-
-					<div class="clearfix visible-sm visible-xs"></div>
-
-					<!-- product -->
-					<div class="col-md-3 col-xs-6">
-						<div class="product">
-							<div class="product-img">
-								<img src="./img/PC_03.jpg" alt="">
-							</div>
-							<div class="product-body">
-								<p class="product-category">OFICINA</p>
-								<h3 class="product-name"><a href="#">Acer Chromebook 11</a></h3>
-								<h4 class="product-price">L.4,872.00</h4>
-								<div class="product-btns">
-									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- /product -->
-
-					<!-- product -->
-					<div class="col-md-3 col-xs-6">
-						<div class="product">
-							<div class="product-img">
-								<img src="./img/PC_04.jpg" alt="">
-							</div>
-							<div class="product-body">
-								<p class="product-category">ESTUDIO</p>
-								<h3 class="product-name"><a href="#">Acer Chromebook R11</a></h3>
-								<h4 class="product-price">L.7,152.00</h4>
-								<div class="product-btns">
-									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- /product -->
-
-					<div class="col-md-12">
-						<div class="section-title text-center">
-							<h3 class="title">CELULARES</h3>
-						</div>
-					</div>
-
-					<!-- product -->
-					<div class="col-md-3 col-xs-6">
-						<div class="product">
-							<div class="product-img">
-								<img src="./img/CEL_01.jpg" alt="">
-							</div>
-							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">Moto G6 - 32GB</a></h3>
-								<h4 class="product-price">L.5,999.00</h4>
-								<div class="product-btns">
-									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- /product -->
-
-					<!-- product -->
-					<div class="col-md-3 col-xs-6">
-						<div class="product">
-							<div class="product-img">
-								<img src="./img/CEL_02.jpg" alt="">
-							</div>
-							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">Moto Z3 Play</a></h3>
-								<h4 class="product-price">L.10,799.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Frutillas</a></h3>
+								<h4 class="product-price">$5000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -271,12 +177,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_03.jpg" alt="">
+								<img src="./img/limones.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">LG Stylo 4 - 32GB</a></h3>
-								<h4 class="product-price">L.6,999.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Limones</a></h3>
+								<h4 class="product-price">$2000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -290,12 +196,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_04.jpg" alt="">
+								<img src="./img/naranja.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">LG V35 ThinQ</a></h3>
-								<h4 class="product-price">L.16,800.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Naranjas</a></h3>
+								<h4 class="product-price">$3000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -305,22 +211,20 @@
 					</div>
 					<!-- /product -->
 
-					<div class="col-md-12">
-						<div class="section-title text-center">
-							<h3 class="title">CÁMARAS</h3>
-						</div>
-					</div>
-
+				</div>
+				<!-- /row -->
+				<!-- row -->
+				<div class="row">
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CA_01.jpg" alt="">
+								<img src="./img/platano.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CÁMARAS</p>
-								<h3 class="product-name"><a href="#">Sony A7 III</a></h3>
-								<h4 class="product-price">L.47,999.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Platano</a></h3>
+								<h4 class="product-price">$4000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -334,12 +238,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CA_02.jpg" alt="">
+								<img src="./img/durazno.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CÁMARAS</p>
-								<h3 class="product-name"><a href="#">Sony Parent A5 100</a></h3>
-								<h4 class="product-price">L.12,000.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Durazno</a></h3>
+								<h4 class="product-price">$4000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -355,12 +259,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CA_03.jpg" alt="">
+								<img src="./img/tomate.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CÁMARAS</p>
-								<h3 class="product-name"><a href="#">Canon T6i</a></h3>
-								<h4 class="product-price">L.14,500.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Tomate</a></h3>
+								<h4 class="product-price">$3000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -369,17 +273,17 @@
 						</div>
 					</div>
 					<!-- /product -->
-					
+
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CA_04.jpg" alt="">
+								<img src="./img/palta.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CÁMARAS</p>
-								<h3 class="product-name"><a href="#">Fujifilm HDR 324</a></h3>
-								<h4 class="product-price">L.32,930.00</h4>
+								<p class="product-category">Frutas</p>
+								<h3 class="product-name"><a href="#">Palta</a></h3>
+								<h4 class="product-price">$6000 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -396,11 +300,7 @@
 		<!-- /Section -->
 
 
-
 		<!-- /CONTENIDO -->
-
-
-
 
 		<!-- FOOTER -->
 		<footer id="footer">
@@ -415,8 +315,8 @@
 								<p>Nos dedicamos a ofrecerte los mejores productos al mejor precio. Contamos con
 								sistema de pedidos hacia proveedores en linea.</p>
 								<ul class="footer-links">
-									<li><a href="https://goo.gl/maps/N4Cdk8s9FdN2"><i class="fa fa-map-marker"></i>2 Calle SO, Bo. San Juan</a></li>
-									<li><a><i class="fa fa-phone"></i>+504 8882-2467</a></li>
+									<li><a href="#"><i class="fa fa-map-marker"></i>2 Calle SO, Bo. San Juan</a></li>
+									<li><a href="#"><i class="fa fa-phone"></i>+504 8882-2467</a></li>
 									<li><a href="mailto:temstorehn@gmail.com"><i class="fa fa-envelope-o"></i> temstorehn@gmail.com</a></li>
 								</ul>
 							</div>
@@ -480,9 +380,8 @@
 		</footer>
 		<!-- /FOOTER -->
 
-		
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/jquery.min.js"></script>
-	
+
 	</body>
 </html>
