--- a/tem-store-hn-master/verduras.html
+++ b/tem-store-hn-master/verduras.html
@@ -138,12 +138,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_01.jpg" alt="">
+								<img src="./img/ajo.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">Moto G6 - 32GB</a></h3>
-								<h4 class="product-price">L.5,999.00</h4>
+								<p class="product-category">Verduras</p>
+								<h3 class="product-name"><a href="#">Ajo</a></h3>
+								<h4 class="product-price">$500 c/u</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -157,12 +157,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_02.jpg" alt="">
+								<img src="./img/cebolla.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">Moto Z3 Play</a></h3>
-								<h4 class="product-price">L.10,799.00</h4>
+								<p class="product-category">Verduras</p>
+								<h3 class="product-name"><a href="#">Cebolla</a></h3>
+								<h4 class="product-price">$1500 Kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -178,12 +178,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_03.jpg" alt="">
+								<img src="./img/coliflor.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">LG Stylo 4 - 32GB</a></h3>
-								<h4 class="product-price">L.6,999.00</h4>
+								<p class="product-category">Verduras</p>
+								<h3 class="product-name"><a href="#">Coliflor</a></h3>
+								<h4 class="product-price">$1500 c/u</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -197,12 +197,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_04.jpg" alt="">
+								<img src="./img/pimentonrojo.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">LG V35 ThinQ</a></h3>
-								<h4 class="product-price">L.16,800.00</h4>
+								<p class="product-category">Verduras</p>
+								<h3 class="product-name"><a href="#">Pimenton Rojo</a></h3>
+								<h4 class="product-price">$1000 c/u</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -220,12 +220,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_05.jpg" alt="">
+								<img src="./img/pimentonverde.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">Blue Studio X8</a></h3>
-								<h4 class="product-price">L.1,200.00</h4>
+								<p class="product-category">Verduras</p>
+								<h3 class="product-name"><a href="#">Pimenton verde</a></h3>
+								<h4 class="product-price">$1500 c/u</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -239,12 +239,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_06.jpg" alt="">
+								<img src="./img/esparrago.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">Huawei Mate SE</a></h3>
-								<h4 class="product-price">L.5,600.00</h4>
+								<p class="product-category">verduras</p>
+								<h3 class="product-name"><a href="#">esparrago</a></h3>
+								<h4 class="product-price">$5000 c/u</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -260,12 +260,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_07.jpg" alt="">
+								<img src="./img/pepino.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">iPhone 6 - 16GB</a></h3>
-								<h4 class="product-price">L.3,600.00</h4>
+								<p class="product-category">Verduras</p>
+								<h3 class="product-name"><a href="#">Pepino</a></h3>
+								<h4 class="product-price">$1500 kg</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
@@ -279,12 +279,12 @@
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="./img/CEL_08.jpg" alt="">
+								<img src="./img/zanahoria.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">CELULARES</p>
-								<h3 class="product-name"><a href="#">Essential Phone - 128GB</a></h3>
-								<h4 class="product-price">L.10,000.00</h4>
+								<p class="product-category">Verduras</p>
+								<h3 class="product-name"><a href="#">Zanahoria</a></h3>
+								<h4 class="product-price">$1500 c/u</h4>
 								<div class="product-btns">
 									<button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
 									<button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
